--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ama Necer Mamboretá - Reconecta con tu Esencia | Sopetrán, Colombia</title>
+    <title>Ama Necer Mamboretá - Reconecta con tu Esencia | Santa Fe de Antioquia, Colombia</title>
     <meta name="description" content="Ceremonias de cacao, alineación de chakras y meditaciones guiadas en Sopetrán. Reconecta con tu esencia y transforma tu vida en un espacio sagrado." />
-    <meta name="keywords" content="ceremonia de cacao, chakras, meditación, Sopetrán, Colombia, sanación espiritual, autodescubrimiento" />
-    <meta name="author" content="Ama Necer Mamboretá" />
+    <meta name="keywords" content="ceremonia de cacao, chakras, meditación, Santa fe de Antioquia, Colombia, sanación espiritual, autodescubrimiento" />
+    <meta name="author" content="Ama-Necer Mamboretá" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="Ama Necer Mamboretá - Reconecta con tu Esencia" />
+    <meta property="og:title" content="Ama-Necer Mamboretá - Reconecta con tu Esencia" />
     <meta property="og:description" content="Ceremonias de cacao, alineación de chakras y meditaciones guiadas en Sopetrán. Reconecta con tu esencia y transforma tu vida." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
